// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepList renders correctly  1`] = `
<DocumentFragment>
  .css-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.css-15bydan-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #151a2d;
}

.css-oogtc7-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.css-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="css-1abqgir-Steps e1p9x3di2"
  >
    <li
      class="css-15bydan-Step e1p9x3di1"
    >
      <div
        class="css-oogtc7-StyledContainer e1u3ywq30"
      >
        1
      </div>
      <div
        class="css-66nq81-StyledDiv e1p9x3di0"
      >
        Item 1
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with bulletIcon & variant 1`] = `
<DocumentFragment>
  .css-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.css-15bydan-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #151a2d;
}

.css-10fqrts-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  background-color: #eafffb;
  color: #149a7b;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.css-14kwy0i-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.css-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="css-1abqgir-Steps e1p9x3di2"
  >
    <li
      class="css-15bydan-Step e1p9x3di1"
    >
      <div
        class="css-10fqrts-StyledContainer e1u3ywq30"
      >
        <svg
          class="css-14kwy0i-StyledIcon-sizeStyles etwatq50"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 15H13V17H11V15ZM11 7H13V13H11V7ZM12 2C6.47 2 2 6.5 2 12C2 14.6522 3.05357 17.1957 4.92893 19.0711C5.85752 19.9997 6.95991 20.7362 8.17317 21.2388C9.38642 21.7413 10.6868 22 12 22C14.6522 22 17.1957 20.9464 19.0711 19.0711C20.9464 17.1957 22 14.6522 22 12C22 10.6868 21.7413 9.38642 21.2388 8.17317C20.7362 6.95991 19.9997 5.85752 19.0711 4.92893C18.1425 4.00035 17.0401 3.26375 15.8268 2.7612C14.6136 2.25866 13.3132 2 12 2ZM12 20C9.87827 20 7.84344 19.1571 6.34315 17.6569C4.84285 16.1566 4 14.1217 4 12C4 9.87827 4.84285 7.84344 6.34315 6.34315C7.84344 4.84285 9.87827 4 12 4C14.1217 4 16.1566 4.84285 17.6569 6.34315C19.1571 7.84344 20 9.87827 20 12C20 14.1217 19.1571 16.1566 17.6569 17.6569C16.1566 19.1571 14.1217 20 12 20Z"
          />
        </svg>
      </div>
      <div
        class="css-66nq81-StyledDiv e1p9x3di0"
      >
        Item 1
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with bulletIcon 1`] = `
<DocumentFragment>
  .css-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.css-15bydan-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #151a2d;
}

.css-oogtc7-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.css-14kwy0i-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.css-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="css-1abqgir-Steps e1p9x3di2"
  >
    <li
      class="css-15bydan-Step e1p9x3di1"
    >
      <div
        class="css-oogtc7-StyledContainer e1u3ywq30"
      >
        <svg
          class="css-14kwy0i-StyledIcon-sizeStyles etwatq50"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 15H13V17H11V15ZM11 7H13V13H11V7ZM12 2C6.47 2 2 6.5 2 12C2 14.6522 3.05357 17.1957 4.92893 19.0711C5.85752 19.9997 6.95991 20.7362 8.17317 21.2388C9.38642 21.7413 10.6868 22 12 22C14.6522 22 17.1957 20.9464 19.0711 19.0711C20.9464 17.1957 22 14.6522 22 12C22 10.6868 21.7413 9.38642 21.2388 8.17317C20.7362 6.95991 19.9997 5.85752 19.0711 4.92893C18.1425 4.00035 17.0401 3.26375 15.8268 2.7612C14.6136 2.25866 13.3132 2 12 2ZM12 20C9.87827 20 7.84344 19.1571 6.34315 17.6569C4.84285 16.1566 4 14.1217 4 12C4 9.87827 4.84285 7.84344 6.34315 6.34315C7.84344 4.84285 9.87827 4 12 4C14.1217 4 16.1566 4.84285 17.6569 6.34315C19.1571 7.84344 20 9.87827 20 12C20 14.1217 19.1571 16.1566 17.6569 17.6569C16.1566 19.1571 14.1217 20 12 20Z"
          />
        </svg>
      </div>
      <div
        class="css-66nq81-StyledDiv e1p9x3di0"
      >
        Item 1
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with disabled state & bullet icon 1`] = `
<DocumentFragment>
  .css-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.css-1x18xpe-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #c4c9d6;
}

.css-laae9d-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #b2b6c3;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.css-14kwy0i-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.css-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="css-1abqgir-Steps e1p9x3di2"
  >
    <li
      class="css-1x18xpe-Step e1p9x3di1"
    >
      <div
        class="css-laae9d-StyledContainer e1u3ywq30"
      >
        <svg
          class="css-14kwy0i-StyledIcon-sizeStyles etwatq50"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="css-66nq81-StyledDiv e1p9x3di0"
      >
        <div>
          Item 1 with disabled state
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with disabled state 1`] = `
<DocumentFragment>
  .css-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.css-1x18xpe-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #c4c9d6;
}

.css-laae9d-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #b2b6c3;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.css-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="css-1abqgir-Steps e1p9x3di2"
  >
    <li
      class="css-1x18xpe-Step e1p9x3di1"
    >
      <div
        class="css-laae9d-StyledContainer e1u3ywq30"
      >
        1
      </div>
      <div
        class="css-66nq81-StyledDiv e1p9x3di0"
      >
        <div>
          Item 1 with disabled state
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with small size 1`] = `
<DocumentFragment>
  .css-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.css-15bydan-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #151a2d;
}

.css-m3mz6z-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 24px;
  height: 24px;
  font-size: 14px;
}

.css-1jkk4vs-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 24px;
  font-size: 16px;
}

<ul
    class="css-1abqgir-Steps e1p9x3di2"
  >
    <li
      class="css-15bydan-Step e1p9x3di1"
    >
      <div
        class="css-m3mz6z-StyledContainer e1u3ywq30"
      >
        1
      </div>
      <div
        class="css-1jkk4vs-StyledDiv e1p9x3di0"
      >
        Item 1 small
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
